# objc2

./: .gitignore  .gitmodules  .travis-disabled.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LAYERED_SAFETY.md  LICENSE-APACHE.txt  LICENSE-MIT.txt  LICENSE-ZLIB.txt  LICENSE.md  README.md  TODO.md  build.rs  rust-toolchain.toml  tea.yaml  travis_install.sh  travis_test.sh
block-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
block-sys/src/: lib.rs
block2/: CHANGELOG.md  Cargo.toml  README.md
block2/src/: block.rs  concrete_block.rs  debug.rs  global.rs  lib.rs  rc_block.rs  test_utils.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: class.rs  encoding_parse.rs  sel.rs
gnustep_base_src/: Cargo.toml
gnustep_base_src/src/: lib.rs
gnustep_libobjc2_src/: Cargo.toml  README.md
gnustep_libobjc2_src/src/: lib.rs
objc/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
objc-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
objc-sys/helper-scripts/: gen-git.fish  gnustep-headers.h
objc-sys/src/: class.rs  constants.rs  exception-macos-x86.rs  exception.rs  image_info.rs  internal.rs  lib.rs  message.rs  method.rs  object.rs  property.rs  protocol.rs  rc.rs  selector.rs  types.rs  various.rs
objc/src/: cache.rs  declare.rs  encode.rs  exception.rs  lib.rs  macros.rs  runtime.rs  test_utils.rs
objc/tests/: use_macros.rs
objc/tests-ios/: prelude.rs
objc2/: CHANGELOG.md  CHANGELOG_FOUNDATION.md  Cargo.toml  README.md  build.rs
objc2-encode/: CHANGELOG.md  Cargo.toml  README.md
objc2-encode/examples/: core_graphics.rs  ns_string.rs  ns_uinteger.rs  opaque_type.rs
objc2-encode/src/: __bool.rs  encode.rs  encoding.rs  helper.rs  lib.rs  parse.rs  static_str.rs
objc2-encode/tests/: test_derive.rs
objc2-foundation/: CHANGELOG.md  Cargo.toml  README.md  build.rs
objc2-foundation-sys/: Cargo.toml
objc2-foundation-sys/src/: generated.rs  generated_nsstring.rs  generated_others_shim.rs  lib.rs
objc2-foundation/examples/: basic_usage.rs  class_with_lifetime.rs  custom_class.rs  declaration.rs  nspasteboard.rs  nsspeechsynthesizer.rs
objc2-foundation/src/: __string_macro.rs  array.rs  attributed_string.rs  comparison_result.rs  copying.rs  data.rs  declare_macro.rs  dictionary.rs  enumerator.rs  exception.rs  geometry.rs  lib.rs  macros.rs  mutable_array.rs  mutable_attributed_string.rs  mutable_data.rs  mutable_string.rs  object.rs  process_info.rs  range.rs  string.rs  thread.rs  uuid.rs  value.rs  zone.rs
objc2-proc-macros/: CHANGELOG.md  Cargo.toml  README.md
objc2-proc-macros/src/: available.rs  deployment_target.rs  derive.rs  lib.rs  utils.rs  versions.rs
objc2/benches/: autorelease.rs
objc2/examples/: basic_usage.rs  class_with_lifetime.rs  custom_class.rs  declaration.rs  declare_ivar.rs  delegate.rs  into_bool.rs  introspection.rs  nspasteboard.rs  nsspeechsynthesizer.rs  speech_synthethis.rs  talk_to_me.rs
objc2/fuzz/: Cargo.toml
objc2/src/: __macro_helpers.rs  bool.rs  cache.rs  class_type.rs  declare.rs  encode.rs  encoding_parse.rs  exception.rs  lib.rs  macros.rs  runtime.rs  test_utils.rs  verify.rs
objc2/tests/: compile_tests.rs  id_retain_autoreleased.rs  no_prelude.rs  use_macros.rs
objc2/tests-ios/: prelude.rs
objc2_block/: Cargo.toml  README.md
objc2_block/src/: lib.rs  test_utils.rs
objc2_block/tests-ios/: prelude.rs
objc2_block_sys/: Cargo.toml  README.md
objc2_block_sys/src/: lib.rs
objc2_exception/: Cargo.toml  README.md  build.rs
objc2_exception/src/: lib.rs
objc2_foundation/: Cargo.toml  README.md
objc2_foundation/examples/: basic_usage.rs  class_with_lifetime.rs  custom_class.rs
objc2_foundation/src/: array.rs  comparison_result.rs  data.rs  dictionary.rs  enumerator.rs  lib.rs  macros.rs  object.rs  range.rs  string.rs  value.rs
objc2_foundation_derive/: Cargo.toml  README.md
objc2_foundation_derive/src/: lib.rs
objc2_id/: Cargo.toml  README.md
objc2_id/src/: id.rs  lib.rs
objc2_sys/: Cargo.toml  README.md  build.rs
objc2_sys/src/: constants.rs  exception.rs  lib.rs  message.rs  types.rs  various.rs
objc2_test_utils/: Cargo.toml  build.rs
objc2_test_utils/src/: lib.rs
objc_block/: Cargo.toml
objc_block/src/: lib.rs  test_utils.rs
objc_block/tests-ios/: prelude.rs
objc_encode/: Cargo.toml  README.md
objc_encode/examples/: core_graphics.rs  ns_string.rs  ns_uinteger.rs  opaque_type.rs
objc_encode/src/: encode.rs  encoding.rs  lib.rs  parse.rs
objc_exception/: Cargo.toml  README.md  build.rs
objc_exception/src/: lib.rs
objc_foundation/: Cargo.toml  README.md
objc_foundation/derive/: Cargo.toml
objc_foundation/examples/: basic_usage.rs  custom_class.rs
objc_foundation/src/: array.rs  data.rs  dictionary.rs  enumerator.rs  lib.rs  macros.rs  object.rs  string.rs  value.rs
objc_foundation_derive/: Cargo.toml
objc_foundation_derive/src/: lib.rs
objc_sys/: Cargo.toml  build.rs
objc_sys/helper-scripts/: gen-git.fish  gnustep-gen.fish
objc_sys/src/: bindings.rs  class.rs  constants.rs  exception.rs  lib.rs  message.rs  method.rs  object.rs  property.rs  protocol.rs  rc.rs  selector.rs  tmp_gnustep.rs  types.rs  various.rs
objc_test_utils/: Cargo.toml  build.rs  lib.rs
objc_test_utils/src/: lib.rs
test-ui/: Cargo.toml
test-ui/src/: main.rs
test-ui/ui/: add_method_no_bool.stderr  autoreleasepool_not_send_sync.rs  autoreleasepool_not_send_sync.stderr  extern_class_not_zst.rs  extern_class_not_zst.stderr  extern_methods_invalid_type.rs  extern_methods_invalid_type.stderr  extern_methods_missing_method.rs  extern_methods_missing_method.stderr  extern_methods_selector_twice.rs  extern_methods_selector_twice.stderr  extern_methods_wrong_arguments.rs  extern_methods_wrong_arguments.stderr  fn_ptr_reference_encode.stderr  fn_ptr_reference_method.rs  fn_ptr_reference_method.stderr  fn_ptr_reference_method2.stderr  global_block_not_encode.stderr  invalid_msg_send.rs  invalid_msg_send.stderr  invalid_msg_send_super.rs  invalid_ns_string_input.rs  (+41 more)
test-ui/ui-ignore/: encode_cstr_not_ident.rs  encode_cstr_too_long.rs
tests/: Cargo.toml  build.rs
(+2794 files in other folders)
